--- a/application/templates/schedule.html
+++ b/application/templates/schedule.html
@@ -6,19 +6,19 @@
   <h2>Schedule a Recording Time</h2>
  
   {% for message in form.section.errors %}
-    <div class="flash">{{ message }}</div>
+    <div class="bg-danger">{{ message }}</div>
   {% endfor %}
 
   {% for message in form.days.errors %}
-    <div class="flash">{{ message }}</div>
+    <div class="bg-danger">{{ message }}</div>
   {% endfor %}
    
   {% for message in form.start_time.errors %}
-    <div class="flash">{{ message }}</div>
+    <div class="bg-danger">{{ message }}</div>
   {% endfor %}
 
   {% for message in form.end_time.errors %}
-    <div class="flash">{{ message }}</div>
+    <div class="bg-danger">{{ message }}</div>
   {% endfor %}
    <hr>
   <form action="{{ url_for('schedule') }}" method=post>
@@ -37,7 +37,7 @@
     {{ form.end_time.label }}
     {{ form.end_time(placeholder="e.g. 9:45") }} {{ form.end_ampm }}
 	    </div>
-    {{ form.submit }}
+    {{ form.submit(class="btn btn-success") }}
   </form>
      
 {% endblock %}
