--- a/application/templates/signin.html
+++ b/application/templates/signin.html
@@ -4,11 +4,11 @@
   <h2>Sign In</h2>
  
   {% for message in form.email.errors %}
-    <div class="flash">{{ message }}</div>
+    <div class="bg-danger">{{ message }}</div>
   {% endfor %}
    
   {% for message in form.password.errors %}
-    <div class="flash">{{ message }}</div>
+    <div class="bg-danger">{{ message }}</div>
   {% endfor %}
    
   <form action="{{ url_for('signin') }}" method=post>
