schedule form validation and db commits working

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -2,6 +2,6 @@
 {% block content %}
   <div class="jumbo">
     <h2>Profile<h2>
-    <h3>This is {{ session['email'] }}'s profile page<h3>
+    <h3>This is {{ user['email'] }}'s profile page<h3>
   </div>
 {% endblock %}
