scheduling backend functional, need frontend cleanup

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -48,13 +48,13 @@
       {% if messages %}
         <ul>
         {% for message in messages %}
-            <li>{{ message }} </li>
+            <li class="success">{{ message }} </li>
         {% endfor %}
         </ul>
       {% endif %}
     {% endwith %}
   <div class="container page">
-    <div id="content" class="container main">    </div>
+    <div id="content" class="container-fluid main">    </div>
       {% block content %}
       {% endblock %}
 
