--- a/application/templates/schedule.html
+++ b/application/templates/schedule.html
@@ -3,7 +3,7 @@
 {% block content %}
   
 
-  <h2>Schedule a Recording Time</h2>
+  <h3>Recording Schedule</h3>
  
   {% for message in form.section.errors %}
     <div class="bg-danger">{{ message }}</div>
@@ -21,23 +21,43 @@
     <div class="bg-danger">{{ message }}</div>
   {% endfor %}
    <hr>
-  <form action="{{ url_for('schedule') }}" method=post>
-    {{ form.hidden_tag() }}
-     <div class="form-group">
-    {{ form.section.label }}
-    {{ form.section }}
-	</div>
-    {{ form.days.label }}
-    {{ form.days }}
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-8">
+      <div class="table-responsive">
+        <table class="table table-hover">
+          {% for job in jobs %}
+            <tr>
+              <td>{{job.section.name}}</td>
+              <td>{{job.day}}</td>
+              <td>{{job.start_time}}</td>
+              <td>{{job.end_time}}</td>
+              <td><a href="{{ url_for('edit_recording', name=job.section.name) }}">View</td>
+            </tr>
+          {% endfor %}
+        </table>
+      </div>
+    </div>
+    <div class="col-xs-6 col-md-4">
+      <h4>Schedule a New Recording</h4>
+      <form action="{{ url_for('add_recording') }}" method=post>
+        {{ form.hidden_tag() }}
       <div class="form-group">
-    {{ form.start_time.label }}
-    {{ form.start_time(placeholder="e.g. 9:00") }} {{ form.start_ampm }}
-	</div>
- 	<div class="form-group">
-    {{ form.end_time.label }}
-    {{ form.end_time(placeholder="e.g. 9:45") }} {{ form.end_ampm }}
-	    </div>
-    {{ form.submit(class="btn btn-success") }}
-  </form>
+        {{ form.section.label }}
+        {{ form.section }}
+    	</div>
+        {{ form.days.label }}
+        {{ form.days }}
+      <div class="form-group">
+        {{ form.start_time.label }}
+        {{ form.start_time(placeholder="e.g. 9:00") }} {{ form.start_ampm }}
+    	</div>
+     	<div class="form-group">
+        {{ form.end_time.label }}
+        {{ form.end_time(placeholder="e.g. 9:45") }} {{ form.end_ampm }}
+    	</div>
+        {{ form.submit(class="btn btn-success") }}
+      </form>
+    </div>
+  </div>
      
 {% endblock %}
