--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -5,8 +5,22 @@
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
-    <script src="/static/lib/jquery/jquery-1.11.2.min.js"></script>
-    <script src="/static/lib/bootstrap/bootstrap.min.js"></script>   
+    <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
+    <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
+      
+    <script type="text/javascript">
+    //     function loadCanvas(id) {
+    //     var canvas = document.createElement('canvas');
+    //     div = document.getElementById(id); 
+    //     canvas.id     = "CursorLayer";
+    //     canvas.width  = window.innerWidth
+    //     canvas.height = window.innerHeight;
+    //     canvas.style.zIndex   = 8;
+    //     canvas.style.position = "absolute";
+    //     canvas.style.border   = "1px solid";
+    //     div.appendChild(canvas)
+    // }
+    </script>
   </head>
   <body>
    <nav class="navbar navbar-default">
