--- a/application/templates/schedule.html
+++ b/application/templates/schedule.html
@@ -31,7 +31,7 @@
               <td>{{job.day}}</td>
               <td>{{job.start_time}}</td>
               <td>{{job.end_time}}</td>
-              <td><a href="{{ url_for('edit_recording', name=job.section.name) }}">View</td>
+              <td><a href="{{ url_for('edit_recording', name=job.section.name) }}">Edit</td>
             </tr>
           {% endfor %}
         </table>
