--- a/application/templates/mobile_editor.html
+++ b/application/templates/mobile_editor.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
+    <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
     <script src="/static/js/mobile_editor.js" type="text/javascript"></script>
 </head>
