email validation and a bit more work on controller

--- a/application/templates/mobile_editor.html
+++ b/application/templates/mobile_editor.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 	<h3 >Real-Time Editor</h3>
-	
+	<div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12" id="canvas-holder">
+            </div>
+        </div>
+    </div>
 </body>
 
