--- a/application/templates/signup.html
+++ b/application/templates/signup.html
@@ -23,19 +23,27 @@
     {{ form.hidden_tag() }}
      <div class="form-group">
     {{ form.firstname.label }}
+    <div class=".col-xs-6 .col-md-4">
     {{ form.firstname }}
+    </div>
     </div>
      <div class="form-group">
     {{ form.lastname.label }}
+    <div class=".col-xs-6 .col-md-4">
     {{ form.lastname }}
+  </div>
     </div>
      <div class="form-group">
     {{ form.email.label }}
+    <div class=".col-xs-6 .col-md-4">
     {{ form.email }}
+  </div>
     </div>
      <div class="form-group">
     {{ form.password.label }}
+    <div class=".col-xs-6 .col-md-4">
     {{ form.password }}
+  </div>
      </div>
     {{ form.submit }}
 
