--- a/application/templates/schedule.html
+++ b/application/templates/schedule.html
@@ -43,17 +43,25 @@
         {{ form.hidden_tag() }}
       <div class="form-group">
         {{ form.section.label }}
+        <div class=".col-xs-6 .col-md-4">
         {{ form.section }}
+      </div>
     	</div>
         {{ form.days.label }}
+        <div class=".col-xs-6 .col-md-4">
         {{ form.days }}
+      </div>
       <div class="form-group">
         {{ form.start_time.label }}
+        <div class=".col-xs-6 .col-md-4">
         {{ form.start_time(placeholder="e.g. 9:00") }} {{ form.start_ampm }}
+      </div>
     	</div>
      	<div class="form-group">
         {{ form.end_time.label }}
+        <div class=".col-xs-6 .col-md-4">
         {{ form.end_time(placeholder="e.g. 9:45") }} {{ form.end_ampm }}
+      </div>
     	</div>
         {{ form.submit(class="btn btn-success") }}
       </form>
