--- a/application/templates/mobile_editor.html
+++ b/application/templates/mobile_editor.html
@@ -11,6 +11,7 @@
      <script src="/static/lib/moment/moment.js" type="text/javascript"></script>
 
     <script src="/static/js/mobile_editor.js" type="text/javascript"></script>
+    <script src="/static/js/editor_helpers.js" type="text/javascript"></script>
    
 </head>
 <body>
