--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -48,12 +48,12 @@
           <li><a href="{{ url_for('signin') }}">Sign In</a></li>
           {% endif %}
       </ul>
-      <form class="navbar-form navbar-right" role="search">
+     <!--  <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav> 
