working on livestream iframe...

--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -2,6 +2,6 @@
  
 {% block content %}
 
-<iframe src="/hls/index.m3u8"></iframe>
+<iframe src="http://aha.local/hls/index.m3u8"></iframe>
 
 {% endblock %}
