got hls playing in iframe locally, now for production

--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -1,7 +1,10 @@
-{% extends "layout.html" %}
- 
-{% block content %}
+<html>
+<head>
+	<!-- ​<script src="/static/lib/jwplayer/jwplayer.js" ></script> -->
+	<!--script>jwplayer.key="ABCdeFG123456SeVenABCdeFG123456SeVen==";</script> -->
+</head>
+<body>
 
 <iframe src="http://aha.local/hls/index.m3u8"></iframe>
-
-{% endblock %}
+</body>
+</html>
