--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 
-<iframe src="http://aha.local/hls/index.m3u8"></iframe>
+<iframe src="http://aha.local/hls/index.m3u8" width="800" height="600"></iframe>
 </body>
 </html>
