--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -1,10 +1,18 @@
 <html>
 <head>
-	<!-- ​<script src="/static/lib/jwplayer/jwplayer.js" ></script> -->
-	<!--script>jwplayer.key="ABCdeFG123456SeVenABCdeFG123456SeVen==";</script> -->
+	<script src="/static/lib/jwplayer/jwplayer.js" ></script>
+	<script>jwplayer.key="tSjzVP1Nl+Jx8mYEpoRw2xHjomlWTNcRZkMAPw==";</script> 
 </head>
 <body>
 
-<iframe src="http://aha.local/hls/index.m3u8" width="800" height="600"></iframe>
+<!-- <iframe src="http://aha.local/hls/index.m3u8" width="800" height="600" style="border:none"></iframe> -->
+<div id="myElement">Loading the player...</div>
+
+<script type="text/javascript">
+    jwplayer("myElement").setup({
+        file: "/hls/index.m3u8"
+    });
+</script>
+
 </body>
 </html>
