trying to get jwplayer working in chrome

--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -11,7 +11,9 @@
 <script type="text/javascript">
     jwplayer("myElement").setup({
         file: "http://aha.local/hls/index.m3u8"
+        primary: "flash"
     });
+
 </script>
 
 </body>
