--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -10,7 +10,7 @@
 
 <script type="text/javascript">
     jwplayer("myElement").setup({
-        file: "http://aha.local/hls/index.m3u8"
+        file: "http://aha.local/hls/index.m3u8",
         primary: "flash"
     });
 
