--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -6,12 +6,13 @@
 <body>
 
 <!-- <iframe src="http://aha.local/hls/index.m3u8" width="800" height="600" style="border:none"></iframe> -->
-<div id="myElement">Loading the player...</div>
+<div id="container">Loading the player...</div>
 
 <script type="text/javascript">
-    jwplayer("myElement").setup({
-        file: "http://aha.local/hls/index.m3u8",
-        primary: "flash"
+    jwplayer("container").setup({
+    	androidhls: true,
+        file: 'http://aha.local/hls/index.m3u8',
+        primary: 'flash'
     });
 
 </script>
