--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<script src="/static/lib/jwplayer/jwplayer.js" ></script>
+	<script src="/static/lib/jwplayer/jwplayer.js" type="text/javascript"></script>
 	<script>jwplayer.key="tSjzVP1Nl+Jx8mYEpoRw2xHjomlWTNcRZkMAPw==";</script> 
 </head>
 <body>
@@ -10,7 +10,8 @@
 
 <script type="text/javascript">
     jwplayer("container").setup({
-    	androidhls: true,
+        // file: 'rtmp://aha.local/webcam/flv:mystream',
+        androidhls: true,
         file: 'http://aha.local/hls/index.m3u8',
         primary: 'flash'
     });
