--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<iframe src="http://aha.local/hls/index.m3u8" width="800" height="600" style="border:none"></iframe>
+<iframe src="/hls/index.m3u8" width="800" height="600" style="border:none"></iframe>
 <!-- <div id="container">Loading the player...</div> -->
 
 <script type="text/javascript">
