--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
     <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
+    <script src="/static/lib/jwplayer/jwplayer.js" type="text/javascript"></script>
+    <script>jwplayer.key="tSjzVP1Nl+Jx8mYEpoRw2xHjomlWTNcRZkMAPw==";</script> 
     
     <script type="text/javascript">
     //     function loadCanvas(id) {
