--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -1,9 +1,7 @@
-<html>
-<head>
-	<script src="/static/lib/jwplayer/jwplayer.js" type="text/javascript"></script>
-	<script>jwplayer.key="tSjzVP1Nl+Jx8mYEpoRw2xHjomlWTNcRZkMAPw==";</script> 
-</head>
-<body>
+{% extends "layout.html" %}
+ 
+{% block content %}
+ 
 
 <iframe src="/hls/index.m3u8" width="800" height="600" style="border:none"></iframe>
 <!-- <div id="container">Loading the player...</div> -->
@@ -18,5 +16,4 @@
 
 </script>
 
-</body>
-</html>
+{% endblock %}
