fixing boostrap container

--- a/application/templates/404.html
+++ b/application/templates/404.html
@@ -1,15 +1,12 @@
 <!doctype html>
-<html lang="en" ng-app="AngularFlask">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>AngularFlask</title>
+	<title>Aha!</title>
 
 	<link rel="stylesheet" href="/static/css/bootstrap.css">
 	<link rel="stylesheet" href="/static/css/bootstrap-theme.css">
 	<link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
-
-	<script src="/static/lib/angular/angular.js"></script>
-	<script src="/static/lib/angular/angular-resource.js"></script>
 
 	<script src="/static/js/app.js"></script>
 	<script src="/static/js/controllers.js"></script>
