--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aha!</title> 
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
@@ -26,7 +29,7 @@
   </head>
   <body>
    <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -69,7 +72,8 @@
         </ul>
       {% endif %}
     {% endwith %}
-    <div id="content" class="container-fluid main"> 
+    <div id="content" class="container"> 
+      
       {% block content %}
       {% endblock %}
 
