--- a/application/templates/mobile_editor.html
+++ b/application/templates/mobile_editor.html
@@ -12,6 +12,7 @@
 
     <script src="/static/js/mobile_editor.js" type="text/javascript"></script>
     <script src="/static/js/editor_helpers.js" type="text/javascript"></script>
+     <script src="/static/js/editor_api.js" type="text/javascript"></script>
    
 </head>
 <body>
