--- a/application/templates/404.html
+++ b/application/templates/404.html
@@ -1,21 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Aha!</title>
-
-	<link rel="stylesheet" href="/static/css/bootstrap.css">
-	<link rel="stylesheet" href="/static/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
-
-	<script src="/static/js/app.js"></script>
-	<script src="/static/js/controllers.js"></script>
- 	<script src="/static/js/services.js"></script>
-
-	<script src="/static/lib/jquery/jquery.min.js"></script>
-	<script src="/static/lib/bootstrap/bootstrap.min.js"></script>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
 	<div class="container page">
 		<div id="content" class="container main" ng-view>
 			<div>
@@ -23,17 +7,4 @@
 				<h4>Sorry, but the page you were trying to view does not exist.</h4>
 			</div>
 		</div>
-
-		<hr>
-		<footer id="footer" class="footer">
-			<div class="footer-left">
-				<a href="/about">About</a> |
-				<a href="/">Home</a>
-			</div>
-			<div class="footer-right">
-				<span>&copy; 2015 Aha!</span>
-			</div>
-		</footer>
-	</div>
-</body>
-</html>
+{% endblock %}
