working on templates and js

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -48,6 +48,7 @@
           {% if 'email' in session %}
           <li><a href="{{ url_for('home') }}">Home</a></li>
           <li><a href="{{ url_for('view_schedule') }}">Schedule</a></li>
+          <li><a href="{{ url_for('editor') }}">Editor</a></li>
           <li><a href="{{ url_for('signout') }}">Sign Out</a></li>
           {% else %}
           <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
@@ -63,7 +64,6 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav> 
-  <hr>
     <div id="content" class="container"> 
     {% with messages = get_flashed_messages() %}
       {% if messages %}
