--- a/application/templates/mobile_editor.html
+++ b/application/templates/mobile_editor.html
@@ -1,27 +1,21 @@
-<html>
-<head>
-	<title> Aha! Controller </title>
+{% extends "layout.html" %}
+ 
+{% block content %}
+
+{% block javascript %}
 	<script src="/static/lib/p5/p5.js" type="text/javascript"></script>
     <script src="/static/lib/p5/p5.dom.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
-    <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
-    <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
-     <script src="/static/lib/moment/moment.js" type="text/javascript"></script>
-
     <script src="/static/js/mobile_editor.js" type="text/javascript"></script>
     <script src="/static/js/editor_helpers.js" type="text/javascript"></script>
      <script src="/static/js/editor_api.js" type="text/javascript"></script>
-   
-</head>
-<body>
-	<h3 >Real-Time Editor</h3>
-	<div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-12" id="canvas-holder">
-            </div>
-        </div>
+{% endblock %}
+
+    <div class="row">
+            <div class="col-md-6 col-md-offset-3"><h4 >Real-Time Editor</h4></div>
     </div>
-</body>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3" id="canvas-holder"></div>
+    </div>
+
+{% endblock %}
 
