--- a/application/templates/schedule.html
+++ b/application/templates/schedule.html
@@ -2,7 +2,6 @@
  
 {% block content %}
   
-
   <h3>Recording Schedule</h3>
  
   {% for message in form.section.errors %}
@@ -24,12 +23,19 @@
     <div class="col-xs-12 col-sm-6 col-md-8">
       <div class="table-responsive">
         <table class="table table-hover">
+          <tr>
+            <td>Class Name</td>
+            <td>Day</td>
+            <td>Start Time</td>
+            <td>End Time</td>
+            <td><td>
+          </tr>
           {% for job in jobs %}
             <tr>
-              <td>{{job.section.name}}</td>
-              <td>{{job.day}}</td>
-              <td>{{job.start_time}}</td>
-              <td>{{job.end_time}}</td>
+              <td>{{ job.section.name }}</td>
+              <td>{{ job.day|dayformat }}</td>
+              <td>{{ job.start_time|datetimeformat }}</td>
+              <td>{{ job.end_time|datetimeformat }}</td>
               <td><a href="{{ url_for('delete_recording', id=job.id) }}">Delete</td>
               <td><a href="{{ url_for('edit_recording', id=job.id) }}">Edit</td>
             </tr>
