--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -1,12 +1,29 @@
 {% extends "layout.html" %}
  
 {% block content %}
- 
 
-<!-- <iframe src="/hls/index.m3u8" width="800" height="600" style="border:none"></iframe> -->
+{% block javascript %}
+<script type="text/javascript">
+	$.ajax({
+		url: 'camera/',
+		type: 'GET',
+		data: {"state": "service"},
+		success: function(data){
+			console.log(data);
+		},
+		error: function(data){
+			console.log(data);
+		}
+	});
+</script>
+
+{% endblock %}
+
+<iframe src="/hls/index.m3u8" width="800" height="600" style="border:none"></iframe>
 <!-- <div id="container">Loading the player...</div> -->
 
 <script type="text/javascript">
+    
     jwplayer("container").setup({
         // file: 'rtmp://aha.local/webcam/flv:mystream',
         androidhls: true,
