--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -7,6 +7,7 @@
 	$.ajax({
 		url: 'camera/',
 		type: 'GET',
+		async: false,
 		data: {"state": "service"},
 		success: function(data){
 			console.log(data);
@@ -19,7 +20,7 @@
 
 {% endblock %}
 
-<iframe src="/hls/index.m3u8" width="800" height="600" style="border:none"></iframe>
+<iframe src="/hls/index.m3u8" width="400" height="300" style="border:none"></iframe>
 <!-- <div id="container">Loading the player...</div> -->
 
 <script type="text/javascript">
