smarter live view handling

--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -4,18 +4,18 @@
 
 {% block javascript %}
 <script type="text/javascript">
-	$.ajax({
-		url: 'camera/',
-		type: 'GET',
-		async: false,
-		data: {"state": "service"},
-		success: function(data){
-			console.log(data);
-		},
-		error: function(data){
-			console.log(data);
-		}
-	});
+// 	$.ajax({
+// 		url: 'camera/',
+// 		type: 'GET',
+// 		async: false,
+// 		data: {"state": "service"},
+// 		success: function(data){
+// 			console.log(data);
+// 		},
+// 		error: function(data){
+// 			console.log(data);
+// 		}
+// 	});
 </script>
 
 {% endblock %}
