--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -32,6 +32,23 @@
         primary: 'flash'
     });
 
+$( window ).on("beforeunload", function() {
+	if(videoType==="adhoc"){
+		$.ajax({
+			url: 'camera/',
+			type: 'GET',
+			data: {"state": "off"},
+			success: function(data){
+				console.log(data);
+			},
+			error: function(error){
+				console.log(error);
+			}
+		});
+		return "Please make sure that you turn the turn off recording.";
+	}
+});
+
 </script>
 
 {% endblock %}
