--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -29,6 +29,13 @@ $( window ).on("beforeunload", function() {
 		}
 	});
 	return "Please make sure that you turn the turn off recording.";
+
+	 jwplayer("container").setup({
+        file: 'rtmp://aha.local/webcam/flv:mystream',
+        // androidhls: true,
+        // file: 'http://aha.local/hls/index.m3u8',
+        primary: 'flash'
+    });
 });
 
 </script>
@@ -47,20 +54,20 @@ $( window ).on("beforeunload", function() {
     //     primary: 'flash'
     // });
 
-$( window ).on("beforeunload", function() {
-	$.ajax({
-		url: 'camera/',
-		type: 'GET',
-		data: {"state": "off"},
-		success: function(data){
-			console.log(data);
-		},
-		error: function(error){
-			console.log(error);
-		}
-	});
-	return "Please make sure that you turn the turn off recording.";
-});
+// $( window ).on("beforeunload", function() {
+// 	$.ajax({
+// 		url: 'camera/',
+// 		type: 'GET',
+// 		data: {"state": "off"},
+// 		success: function(data){
+// 			console.log(data);
+// 		},
+// 		error: function(error){
+// 			console.log(error);
+// 		}
+// 	});
+// 	return "Please make sure that you turn the turn off recording.";
+// });
 
 </script>
 
