--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -42,8 +42,8 @@ $( window ).on("beforeunload", function() {
 
 {% endblock %}
 
-<iframe src="/hls/index.m3u8" width="400" height="300" style="border:none"></iframe>
-<!-- <div id="container">Loading the player...</div> -->
+<!-- <iframe src="/hls/index.m3u8" width="400" height="300" style="border:none"></iframe> -->
+<div id="container">Loading the player...</div>
 
 <script type="text/javascript">
     
