--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -4,21 +4,21 @@
 
 {% block javascript %}
 <script type="text/javascript">
-$( window ).on("beforeunload", function() {
-	$.ajax({
-		url: 'camera/',
-		type: 'GET',
-		data: {"state": "off"},
-		success: function(data){
-			console.log(data);
-		},
-		error: function(error){
-			console.log(error);
-		}
-	});
-	return "Please make sure that you turn the turn off recording.";
+// $( window ).on("beforeunload", function() {
+// 	$.ajax({
+// 		url: 'camera/',
+// 		type: 'GET',
+// 		data: {"state": "off"},
+// 		success: function(data){
+// 			console.log(data);
+// 		},
+// 		error: function(error){
+// 			console.log(error);
+// 		}
+// 	});
+// 	return "Please make sure that you turn the turn off recording.";
 
-});
+// });
 
 </script>
 
@@ -27,10 +27,11 @@ $( window ).on("beforeunload", function() {
 <!-- <iframe src="/hls/index.m3u8" width="400" height="300" style="border:none"></iframe> -->
 <!-- <div id="container">Loading the player...</div> -->
 
-<video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="640" height="264"
+<video id="example_video_1" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264"
       poster="http://video-js.zencoder.com/oceans-clip.png"
       data-setup="{}">
-    <source src="rtmp://aha.local/webcam/mystream" type='rtmp/flv' />
+   <source src="rmtp://aha.local/webcam/&mp4:mystream" type='rtmp/mp4'>
+    <source src="rtmp://cp67126.edgefcs.net/ondemand/&mp4:mediapm/ovp/content/test/video/spacealonehd_sounas_640_300.mp4" type='rtmp/mp4'>
   </video>
 
 <script type="text/javascript">
