--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -8,16 +8,14 @@
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
-    
+    <link rel="stylesheet" href="/static/lib/video-js/video-js.css" type="text/css">
     <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
     <script src="/static/lib/moment/moment.js" type="text/javascript"></script>
-    
-     <link href="http://vjs.zencdn.net/4.11/video-js.css" rel="stylesheet">
-  <script src="http://vjs.zencdn.net/4.11/video.js"></script>
+    <script src="/static/lib/video-js/video.js" type="text/javascript"></script>
     
   <script>
-    // _V_.options.flash.swf = "/static/lib/video-js/video-js.swf";
+    _V_.options.flash.swf = "/static/lib/video-js/video-js.swf";
   </script>
   </head>
   <body>
