--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -24,15 +24,15 @@
 
 {% endblock %}
 
-<!-- <iframe src="/hls/index.m3u8" width="400" height="300" style="border:none"></iframe> -->
+<iframe src="/hls/index.m3u8" width="400" height="300" style="border:none"></iframe>
 <!-- <div id="container">Loading the player...</div> -->
 
-<video id="example_video_1" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264"
+<!-- <video id="example_video_1" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264"
       poster="http://video-js.zencoder.com/oceans-clip.png"
       data-setup="{}">
-   <source src="rmtp://aha.local/webcam/&mp4:mystream" type='rtmp/mp4'>
+   <source src="rmtp://aha.local/rtmp/&flv:live" type='rtmp/flv'>
     <source src="rtmp://cp67126.edgefcs.net/ondemand/&mp4:mediapm/ovp/content/test/video/spacealonehd_sounas_640_300.mp4" type='rtmp/mp4'>
-  </video>
+  </video> -->
 
 <script type="text/javascript">
     
