--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/lib/video-js/video-js.css" type="text/css">
     <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
-    <script src="/static/lib/moment/moment.js" type="text/javascript"></script>
+    <script src="/static/lib/moment/moment.min..js" type="text/javascript"></script>
     <script src="/static/lib/video-js/video.js" type="text/javascript"></script>
     
   <script>
