--- a/application/templates/example.html
+++ b/application/templates/example.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>video.js HLS Plugin Example</title>
+{% extends "layout.html" %}
+ 
+{% block content %}
 
-  <link href="/static/lib/video-js/video-js.css" rel="stylesheet">
-  
-  <!-- video.js -->
-  <script src="/static/lib/video-js/video.js"></script>
+{% block javascript %}
 
 
   <!-- Media Sources plugin -->
@@ -34,6 +29,7 @@
   <script src="/static/lib/videojs-contrib-hls-0.12.0/src/decrypter.js"></script>
 
   <script src="/static/lib/videojs-contrib-hls-0.12.0/src/bin-utils.js"></script>
+{% endblock %}
   
   <!-- example MPEG2-TS segments -->
   <!-- bipbop -->
@@ -41,39 +37,20 @@
   <!-- bunnies -->
   <!--<script src="test/tsSegment-bc.js"></script>-->
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    .info {
-      background-color: #eee;
-      border: thin solid #333;
-      border-radius: 3px;
-      padding: 0 5px;
-      margin: 20px 0;
-    }
-  </style>
-
-</head>
-<body>
-  <div class="info">
-    <p>The video below is an <a href="https://developer.apple.com/library/ios/documentation/networkinginternet/conceptual/streamingmediaguide/Introduction/Introduction.html#//apple_ref/doc/uid/TP40008332-CH1-SW1">HTTP Live Stream</a>. On desktop browsers other than Safari, the HLS plugin will polyfill support for the format on top of the video.js Flash tech.</p>
-    <p>Due to security restrictions in Flash, you will have to load this page over HTTP(S) to see the example in action.</p>
-  </div>
   <video id="video"
          class="video-js vjs-default-skin"
-         height="300"
-         width="600"
+         height="250"
+         width="300"
          controls>
     <source
        src="http://aha.local/hls/index.m3u8"
-       type="application/x-mpegURL">
+       type="application/x-mpegURL" />
   </video>
+  
   <script>
     videojs.options.flash.swf = '/static/lib/video-js/video-js.swf';
     // initialize the player
     var player = videojs('video');
   </script>
-</body>
-</html>
+
+{% endblock %}
