--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -5,18 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aha!</title> 
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
-    <link rel="stylesheet" href="/static/lib/video-js/video-js.css" type="text/css">
-    <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
-    <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
-    <script src="/static/lib/moment/moment.min..js" type="text/javascript"></script>
-    <script src="/static/lib/video-js/video.js" type="text/javascript"></script>
-    
-  <script>
-    _V_.options.flash.swf = "/static/lib/video-js/video-js.swf";
-  </script>
+      <link rel="stylesheet" href="/static/css/bootstrap.css">
+      <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
+      <link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
+      <link rel="stylesheet" href="/static/lib/video-js/video-js.css" type="text/css">
+      <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
+      <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
+      <script src="/static/lib/moment/moment.min..js" type="text/javascript"></script>
+      <link href="/static/lib/video-js/video-js.css" rel="stylesheet">
+      <script src="/static/lib/video-js/video.js"></script>
   </head>
   <body>
    <nav class="navbar navbar-default">
