--- a/application/templates/example.html
+++ b/application/templates/example.html
@@ -41,16 +41,17 @@
          class="video-js vjs-default-skin"
          height="250"
          width="300"
-         controls>
+         controls
+         preload>
     <source
-       src="http://aha.local/hls/index.m3u8"
+       src="/hls/index.m3u8"
        type="application/x-mpegURL" />
   </video>
   
   <script>
     videojs.options.flash.swf = '/static/lib/video-js/video-js.swf';
     // initialize the player
-    var player = videojs('video');
+    var player = videojs('video', { muted: true });
   </script>
 
 {% endblock %}
