--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -12,7 +12,7 @@
       <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
       <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
       <script src="/static/lib/moment/moment.min.js" type="text/javascript"></script>
-      <link href="/static/lib/video-js/video-js.css" rel="stylesheet">
+      <link href="/static/lib/video-js/video-js.min.css" rel="stylesheet">
       <script src="/static/lib/video-js/video.js"></script>
   </head>
   <body>
