working on video post processing, cleaning up

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -57,7 +57,7 @@
       {% if messages %}
         <ul>
         {% for message in messages %}
-            <li class="success">{{ message|datetimeformat|dayformat }} </li>
+            <li class="success">{{ message }} </li>
         {% endfor %}
         </ul>
       {% endif %}
