--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aha!</title> 
-      <link rel="stylesheet" href="/static/css/bootstrap.css">
-      <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
-      <link rel="stylesheet" href="/static/css/bootstrap-theme.css.map">
+      <link rel="stylesheet" href="/static/css/bootstrap.css" type="text/css">
+      <link rel="stylesheet" href="/static/css/bootstrap-theme.css" type="text/css">
+      <!-- <link rel="stylesheet" href="/static/css/bootstrap-theme.css.map" > -->
       <link rel="stylesheet" href="/static/lib/video-js/video-js.css" type="text/css">
       <script src="/static/lib/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
       <script src="/static/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script> 
