--- a/application/templates/section.html
+++ b/application/templates/section.html
@@ -46,7 +46,7 @@
     {{ form.name }}
     </div>
     </div>
-    {{ form.submit(class="btn btn-success") }}
+    <button type="submit" class="btn btn-default">Submit</button>
 
   </form>
 </div>
