--- a/application/templates/recording.html
+++ b/application/templates/recording.html
@@ -1,10 +1,6 @@
 {% extends "layout.html" %}
  
 {% block content %}
- 
-  {% for message in form.section.errors %}
-    <div class="bg-danger">{{ message }}</div>
-  {% endfor %}
 
   {% for message in form.days.errors %}
     <div class="bg-danger">{{ message }}</div>
@@ -17,22 +13,17 @@
   {% for message in form.end_time.errors %}
     <div class="bg-danger">{{ message }}</div>
   {% endfor %}
-  <h4>{{ title }}</h4>
-  <form action="{{ url_for(endpoint, id=id) }}" method=post>
-    {{ form.hidden_tag() }}
-     <div class="form-group">
-    {{ form.section.label }}
-    {{ form.section }}
-	</div>
+  <h4>{{ Edit Recording for {{section.name}} }}</h4>
+  <form action="{{ url_for('recording', recording_id=id) }}" method=post>
     {{ form.days.label }}
     {{ form.days }}
       <div class="form-group">
     {{ form.start_time.label }}
-    {{ form.start_time(placeholder="e.g. 9:00") }} {{ form.start_ampm }}
+    {{ form.start_time }}
 	</div>
  	<div class="form-group">
     {{ form.end_time.label }}
-    {{ form.end_time(placeholder="e.g. 9:45") }} {{ form.end_ampm }}
+    {{ form.end_time }}
 	    </div>
     {{ form.submit(class="btn btn-success") }}
   </form>
