passing pid to live, not sure its necessary

--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -37,7 +37,7 @@
   <!-- bunnies -->
   <!--<script src="test/tsSegment-bc.js"></script>-->
 
-  <video id={{ pid }}
+  <video id={{ pid|safe }}
          class="video-js vjs-default-skin"
          height="250"
          width="300"
