--- a/application/templates/schedule.html
+++ b/application/templates/schedule.html
@@ -2,7 +2,7 @@
  
 {% block content %}
   
-  <h3>Recording Schedule for {{ section.name }}</h3>
+  <h3>{{ section.name }} Schedule</h3>
  
   {% for message in form.days.errors %}
     <div class="bg-danger">{{ message }}</div>
@@ -17,6 +17,7 @@
   {% endfor %}
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-8">
+      <h4>Active Recordings</h4>
       <div class="table-responsive">
         <table class="table table-hover">
           <tr>
@@ -25,12 +26,13 @@
             <td>End Time</td>
             <td><td>
           </tr>
-          {% for recording in recordings %}
+          {% if active_recordings %}
+          {% for recording in active_recordings %}
             <tr>
               <td>{{ recording.day|dayformat }}</td>
               <td>{{ recording.start_time|datetimeformat }}</td>
               <td>{{ recording.end_time|datetimeformat }}</td>
-              <td><a href="{{ url_for('schedule', state='deactivate', section_id=section.id, recording_id=recording.id) }}">
+              <td><a href="{{ url_for('recordings', state='deactivate', section_id=section.id, recording_id=recording.id) }}">
                 Deactivate</a>
               </td>
               <td>
@@ -39,12 +41,49 @@
                 </td>
             </tr>
           {% endfor %}
+          {% else %}
+              <tr>
+                <td>There are no active recordings.</td>
+              </tr>
+          {% endif %} 
+        </table>
+      </div>
+      <hr>
+      <h4>Inactive Recordings</h4>
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <tr>
+            <td>Day</td>
+            <td>Start Time</td>
+            <td>End Time</td>
+            <td><td>
+          </tr>
+          {% if inactive_recordings %}
+          {% for recording in inactive_recordings %}
+            <tr>
+              <td>{{ recording.day|dayformat }}</td>
+              <td>{{ recording.start_time|datetimeformat }}</td>
+              <td>{{ recording.end_time|datetimeformat }}</td>
+              <td><a href="{{ url_for('recordings', state='activate', section_id=section.id, recording_id=recording.id) }}">
+                Activate</a>
+              </td>
+              <td>
+                <a href="{{ url_for('recording', section_id=section.id, recording_id=recording.id) }}">
+                  Edit</a>
+                </td>
+            </tr>
+          {% endfor %}
+          {% else %}
+              <tr>
+                <td>There are no inactive recordings.</td>
+              </tr>
+          {% endif %} 
         </table>
       </div>
     </div>
     <div class="col-xs-6 col-md-4">
       <h4>Schedule a New Recording</h4>
-      <form action="{{ url_for('schedule', section_id=section.id ) }}" method=post>
+      <form action="{{ url_for('recordings', section_id=section.id ) }}" method=post>
         {{ form.hidden_tag() }}
 
         {{ form.days.label }}
