--- a/application/templates/section.html
+++ b/application/templates/section.html
@@ -27,7 +27,7 @@
                 <td>placeholder</td>
                 <td>placeholder</td>
                 <td>
-                    <a href="{{ url_for('schedule', section_id=section.id) }}">Schedule</a>
+                    <a href="{{ url_for('recordings', section_id=section.id) }}">Schedule</a>
                 </td>
                 <td>
                     <a href="{{ url_for('section', action='delete', section_id=section.id) }}">Delete</a>
