giving up on uwsgi

--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -44,7 +44,7 @@
          controls
          preload>
     <source
-       src="/hls/index.m3u8"
+       src="http://aha.local/hls/index.m3u8"
        type="application/x-mpegURL" />
   </video>
   
