--- a/application/templates/recording.html
+++ b/application/templates/recording.html
@@ -13,8 +13,8 @@
   {% for message in form.end_time.errors %}
     <div class="bg-danger">{{ message }}</div>
   {% endfor %}
-  <h4> Edit Recording for {{section.name}} </h4>
-  <form action="{{ url_for('recording', section_id = section.id, recording_id=id) }}" method=post>
+  <h4> Edit Recording for {{investigation.name}} </h4>
+  <form action="{{ url_for('recording', investigation_id = investigation.id, recording_id=id) }}" method=post>
   {{ form.hidden_tag() }}
   <div class="hidden">{{form.days}}</div>
   <div class="form-group">
