--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -35,7 +35,7 @@
           {% if 'email' in session %}
           <li><a href="{{ url_for('home') }}">Home</a></li>
           <li><a href="{{ url_for('investigation') }}">Investigate</a></li>
-          <li><a href="{{ url_for('editor') }}">Real-Time Capture</a></li>
+          <li><a href="{{ url_for('capture') }}">Real-Time Capture</a></li>
           <li><a href="{{ url_for('camera', state='live') }}">Live View</a></li>
           <li><a href="{{ url_for('signout') }}">Sign Out</a></li>
           {% else %}
