--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -4,25 +4,8 @@
 
 <div class="row">
     <div class=".col-xs-6 .col-sm-4">
-        <!-- <a href="{{ video_path }}"><img src="{{ thumbnail_path }}"></a> -->
+        <a href="{{ video_path }}"><img src="{{ thumbnail_path }}"></a>
     </div>
 </div>
-
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-      <div class="btn-group" role="group" aria-label="First group">
-        <button type="button" class="btn btn-default">1</button>
-        <button type="button" class="btn btn-default">2</button>
-        <button type="button" class="btn btn-default">3</button>
-        <button type="button" class="btn btn-default">4</button>
-      </div>
-      <div class="btn-group" role="group" aria-label="Second group">
-        <button type="button" class="btn btn-default">5</button>
-        <button type="button" class="btn btn-default">6</button>
-        <button type="button" class="btn btn-default">7</button>
-      </div>
-      <div class="btn-group" role="group" aria-label="Third group">
-        <button type="button" class="btn btn-default">8</button>
-      </div>
-    </div>
 
 {% endblock %}
