--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -30,19 +30,12 @@
 
   <script src="/static/lib/videojs-contrib-hls-0.12.0/src/bin-utils.js"></script>
 {% endblock %}
-  
-  <!-- example MPEG2-TS segments -->
-  <!-- bipbop -->
-  <!-- <script src="test/tsSegment.js"></script> -->
-  <!-- bunnies -->
-  <!--<script src="test/tsSegment-bc.js"></script>-->
 
   <video id="live"
-         class="video-js vjs-default-skin"
+         class="video-js vjs-default-skin embed-responsive-item"
          height="250"
          width="300"
          controls
-         muted
          preload>
     <source
        src="http://aha.local/hls/index.m3u8"
@@ -54,7 +47,7 @@
       videojs.options.flash.swf = '/static/lib/video-js/video-js.swf';
     // initialize the player
 
-      var player = videojs("live", { muted: true });
+      var player = videojs("live");
     }
   </script>
 
