cleaning up controllers

--- a/application/templates/schedule.html
+++ b/application/templates/schedule.html
@@ -2,7 +2,7 @@
  
 {% block content %}
   
-  <h3>{{ investigation.name }} Schedule</h3>
+  <h3> {{ investigation.question }} </h3>
  
   {% for message in form.days.errors %}
     <div class="bg-danger">{{ message }}</div>
