--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -32,8 +32,7 @@
 {% endblock %}
 
   <div id="vidContainer">
-
-  
+  </div>
   <script>
     window.onload = function () {
       if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
