--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -35,6 +35,8 @@
   </div>
   <script>
     window.onload = function () {
+      vc = document.getElementByID("vidContainer");
+      vc.innerHTML = "waiting..."
       if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
         vc = document.getElementByID("vidContainer");
         vc.innerHTML = "<iframe src='/hls/index.m3u8'></iframe>"
