--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -38,9 +38,7 @@
          class='video-js vjs-default-skin '
          controls
          preload>
-          <source
-             src='/hls/index.m3u8'
-             type='application/x-mpegURL' />
+          <source src='/hls/index.m3u8'>
         </video>
   
   <script>
